--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,6 @@
 
 <script>
 var app = angular.module('ActivityMeterApp', ['ui.bootstrap']);
-
 	function loadActivities ($scope, $http){
 		$http({
        		 method : 'GET',
@@ -31,7 +30,6 @@ var app = angular.module('ActivityMeterApp', ['ui.bootstrap']);
      			 $scope.activities = response.data;
   		});
   	}
-
 app.controller('ActivityCtrl', function ($scope, $http, $dialog) {
   	
   	loadActivities($scope, $http);
@@ -43,16 +41,16 @@ app.controller('ActivityCtrl', function ($scope, $http, $dialog) {
   	};
   	
   	$scope.add = function(){
-    	$dialog.dialog(angular.extend(addDialogOptions, {})).open().then(function (){
-    	    loadActivities($scope, $http);
-        }) ;
+  		window.location.replace('./activityAdd.html', 'Add');
+    	//$dialog.dialog.(angular.extend(addDialogOptions, {})).open().then(function (){
+    	   // loadActivities($scope, $http);
+       // }) ;
   	};
   	
   	var editDialogOptions = {
 	    controller: 'EditActivityCtrl',
 	    templateUrl: './activityEdit.html',
 	};
-
   	$scope.edit = function(){
    	 	var activityToEdit = $scope.activity;
     	$dialog.dialog(angular.extend(editDialogOptions, {resolve: {v: angular.copy(activityToEdit)}})).
@@ -73,11 +71,9 @@ app.controller('ActivityCtrl', function ($scope, $http, $dialog) {
   		//todo handle error
 	};
 });
-
 app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
   
 	$scope.activity = activity;
-
   	$scope.save = function($activity) {
   	    var putRequest = {
     	method : 'PUT',
@@ -96,8 +92,6 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
     	dialog.close();
   	};
 });
-
-
 app.controller('AddActivityCtrl', function($scope, $http, dialog){
   
   	$scope.save = function($activity) {
@@ -110,18 +104,20 @@ app.controller('AddActivityCtrl', function($scope, $http, dialog){
   				title: $activity.title
 			  }
 		}  
+  		
+  		$scope.close = function() {
+  			window.location.replace('./activity/', 'Activity');
+  		};
 		
   		$http(postRequest).then(function (response) {
   		    loadActivities($scope, $http);
   		}).then(function (){
   			dialog.close();
-  		})
+  		});
   		//todo handle error
-    	//dialog.close();
+    	
   	};
 });
-
-
 </script>
 </head>
 <body>
@@ -130,8 +126,7 @@ app.controller('AddActivityCtrl', function($scope, $http, dialog){
 		<table class="mdl-data-table">
 			<tr>
 				<td class="mdl-data-table__cell--non-numeric" colspan=3>&nbsp;</td>
-				<td class="mdl-data-table__cell--non-numeric"> <!--  <button class="mdl-button" ng-click="add()">add Activity</button>--></td>
-				<a href = "activityAdd.html"><h1>Add Activity</h1></a>
+				<td class="mdl-data-table__cell--non-numeric"><button class="mdl-button" ng-click="add()">add Activity</button></td>
 			</tr>
 			<tr ng-repeat="activity in activities">
 				<td class="mdl-data-table__cell--non-numeric">{{activity.title}}</td>
