--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,30 +1,3 @@
-
-Skip to content
-This repository
-
-    Pull requests
-    Issues
-    Marketplace
-    Explore
-
-    @Kjani01
-
-0
-0
-
-    1
-
-sweIhm/sweiproject-example
-Code
-Issues 2
-Pull requests 0
-Projects 2
-Wiki
-Insights
-sweiproject-example/src/main/resources/static/index.html
-135a304 2 days ago
-@gsocher gsocher relative URL
-155 lines (134 sloc) 4.29 KB
 <!DOCTYPE html>
 <html ng-app="ActivityMeterApp">
 <head>
@@ -167,8 +140,7 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 		<table class="mdl-data-table">
 			<tr>
 				<td class="mdl-data-table__cell--non-numeric" colspan=3>&nbsp;</td>
-				<td class="mdl-data-table__cell--non-numeric"><button
-						class="mdl-button" ng-click="add()">add Activity</button></td>
+				<td class="mdl-data-table__cell--non-numeric"><button class="mdl-button" ng-click="add()">add Activity</button></td>
 			</tr>
 			<tr ng-repeat="activity in activities">
 				<td class="mdl-data-table__cell--non-numeric">{{activity.title}}</td>
@@ -183,17 +155,4 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 </body>
 </html>
 
-    © 2017 GitHub, Inc.
-    Terms
-    Privacy
-    Security
-    Status
-    Help
-
-    Contact GitHub
-    API
-    Training
-    Shop
-    Blog
-    About
 
