reload-problem fixed

--- a/src/main/resources/static/activityAdd.html
+++ b/src/main/resources/static/activityAdd.html
@@ -103,7 +103,7 @@ app.controller('AddActivityCtrl', function($scope, $http, dialog){
   	};
   
   	$scope.close = function(){;
-  		window.location.reload('./index.html');
+  		window.location.replace('./index.html');
     	//dialog.close(undefined);
   	};
 });
