--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -22,15 +22,15 @@ function loadActivity($scope, $http, $activityId){
 	});
 }
 
-app.controller('ActivityCtrl', function ($scope, $http, $dialog) {
+app.controller('MenuActivityCtrl', function ($scope, $http, $dialog) {
+  	
+	
+});
+
+app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
   	
 	loadActivity($scope, $http);
-	
-	var addDialogOptions = {
-    	controller: 'AddActivityCtrl',
-    	templateUrl: './activityAdd.html'
-  	};
-  	
+	  	
   	$scope.edit = function(){
   		window.location.replace('./activityEdit.html?id=' + postId);
   	};
@@ -39,16 +39,16 @@ app.controller('ActivityCtrl', function ($scope, $http, $dialog) {
 
 </head>
 <body>
-<div id="content" ng-controller="ActivityCtrl">
+<div id="content">
 	<div id="head">
 		<img src="images/HM_Logo.jpeg" />
 		<h1>EduLife</h1>
 		<img src="images/Cal-Poly_Logo.jpeg" />
 	</div>
-	<div id="menu">
+	<div id="menu" ng-controller="MenuActivityCtrl">
 		Hier kommt das Menü hin!!
 	</div>
-	<div id="body">
+	<div id="body" ng-controller="DetailActivityCtrl">
 		<h3>{{activity.title}}</h3>
 		<div class="item">
 			<div class="key">Author:</div>
