--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -67,6 +67,7 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 		</div>
 		<div class="buttons">
 			<button ng-click="edit()">Edit</button>
+			<button ng-click="delete()"Delete</button>
 		</div>
 	</div>
 </div>
