--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -63,23 +63,17 @@ app.controller('ActivityCtrl', function ($scope, $http, $dialog) {
 	    templateUrl: './activityEdit.html',
 	};
   	$scope.edit = function(activity){
-   	 	var activityToEdit = activity;
-    	$dialog.dialog(angular.extend(editDialogOptions, {resolve: {activity: angular.copy(activityToEdit)}})).open().then(function (){
-    	    loadActivities($scope, $http);
-        }) ;
+  		window.location.replace('./activityEdit.html');
   	};
 		
-	$scope.delete = function(activity) {
-		var deleteRequest = {
-			method : 'DELETE',
-			url: 'activity/' + activity.id
-		};
-		
-  		$http(deleteRequest).then(function() {
-			loadActivities($scope, $http);
-		});
-  		//todo handle error
-	};
+	$scope.details = function($activity) {
+		$http({
+      		 method : 'GET',
+            url: 'activity'
+                   
+   		}).then(function (response) {
+    			 $scope.activities = response.data;
+ 		});
 });
 app.controller('AddActivityCtrl', function($scope, $http, dialog){
   
@@ -148,7 +142,7 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 				<td class="mdl-data-table__cell--non-numeric">{{activity.tags}}</td>
 				<td class="mdl-data-table__cell--non-numeric"><button
 						class="mdl-button" ng-click="edit(activity)">edit</button>
-					<button class="mdl-button" ng-click="delete(activity)">delete</button></td>
+					<button class="mdl-button" ng-click="detail(activity)">open</button></td>
 			</tr>
 		</table>
 	</div>
