Detailseite ist weitgehend formatiert

--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -48,6 +48,7 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 			<div class="value">{{activity.tags}}</div>
 		</div>
 		<div class="item">
+			<div class="key">Text:</div>
 			<div class="value">{{activity.text}}</div>
 		</div>
 		<div class="buttons">
