--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -52,8 +52,7 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 			<div class="value">{{activity.text}}</div>
 		</div>
 		<div class="buttons">
-			<button ng-click="edit()">Edit</button>
-			<button ng-click="delete()"Delete</button>
+			<button ng-click="edit()">Edit & Delete</button>
 		</div>
 	</div>
 </div>
