--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -39,7 +39,8 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 		<img src="images/Cal-Poly_Logo.jpeg" />
 	</div>
 	<div id="menu">
-		<div ng-click="loadAdd()">Add Activity</div>
+		<a href="./index.html">Index</a>
+		<a href="./activityAdd.html">Add Activity</a>
 	</div>
 	<div id="body" ng-controller="DetailActivityCtrl">
 		<h3>{{activity.title}}</h3>
