--- a/src/main/resources/static/activityAdd.html
+++ b/src/main/resources/static/activityAdd.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
 <html ng-app="ActivityMeterApp">
 <head>
-<title>ActivityMeterApp</title>
 <meta charset="utf-8">
+<title>Activity Details</title>
+<link rel="stylesheet" type= "text/css" href="style.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="https://angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.1.0/ui-bootstrap-tpls.js"></script>
-
-<link
-	href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css"
-	rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="table.css" />
-
-<link rel="stylesheet"
-	href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet"
-	href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
 <script>
+
 var app = angular.module('ActivityMeterApp', ['ui.bootstrap']);
     
 function loadActivities ($scope, $http){
@@ -135,30 +121,38 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
   	};
 });
 </script>
+
 </head>
 <body>
-<div ng-controller="AddActivityCtrl">
-	<div class="modal-header">
-		<h1>Add</h1>
+<div id="content">
+	<div id="head">
+		<img src="images/HM_Logo.jpeg" />
+		<h1>EduLife</h1>
+		<img src="images/Cal-Poly_Logo.jpeg" />
 	</div>
-	<div class="modal-body">
-		<p>
-			Title <input ng-model="activity.title" size="40"/>
-		</p>
-		<p>
-			Text <input ng-model="activity.text" size="100"/>
-		</p>
-		<p>
-			Tags <input ng-model="activity.tags" size="40"/>
-		</p>
-	
+	<div id="menu">
 	</div>
-	<!--  <div class="modal-footer">-->
-		<button class="mdl-button" ng-click="save(activity)">Save</button>
-		<button class="mdl-button" ng-click="close()">Close</button>
-	<!--
-	
-	</div>-->
+	<div id="body" ng-controller="AddActivityCtrl">
+		<h3>Add Activity</h3>
+		
+		<div class="item">
+		<div class="key">Title:</div>
+			<div class="value"><textarea ng-model="activity.title" rows="1" cols="60"></textarea></div>
+		</div>
+		<div class="item">
+		<div class="key">Text:</div>
+		<div class="value"><textarea ng-model="activity.text" rows="1" cols="60"></textarea></div>
+		</div>
+		<div class="item">
+		<div class="key">Tags:</div>
+		<div class="value"><textarea ng-model="activity.tags" rows="1" cols="60"></textarea></div>
+		</div>
+
+		<div class="buttons">
+			<button ng-click="save(activity)">Save</button>
+			<button ng-click="close()">Close</button>
+		</div>
+	</div>
 </div>
 </body>
 </html>
