--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -8,21 +8,33 @@
 <script src="https://angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
+// Read ID to know of which post the details should be shown.
 url = new URL(window.location.href);
 var postId = url.searchParams.get("id");
+if (postId == null) {
+	alert("The activity is not specified. Please contact the administrative!");
+	window.location.replace('./index.html');
+}
+
 var app = angular.module('ActivityMeterApp', ['ui.bootstrap']);
 
-	function loadActivity ($scope, $http){
-		$http({
-       		 method : 'GET',
-       		 url : 'activity/' + postId
-    		}).then(function (response) {
-     			 $scope.activity = response.data;
-  		});
-  	}
+// Get data for the activity from the Rest-API
+function loadActivity ($scope, $http){
+	$http({
+		method : 'GET',
+   		url : 'activity/' + postId
+	}).then(function (response) {
+		if (response.status != 200 || response.data.id == undefined) {
+			alert("The activity you look for is not available!");
+			window.location.replace('./index.html');
+		}
+		else {
+			$scope.activity = response.data;
+		}
+	});
+}
 
-
-
+// Controller for the details-page
 app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
   	
 	loadActivity($scope, $http);
@@ -46,11 +58,11 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 		<h3>{{activity.title}}</h3>
 		<div class="item">
 			<div class="key">Text:</div>
-			<div class="value">{{activity.text}}</div>
+			<div class="value">{{activity.text}}&nbsp;</div>
 		</div>
 		<div class="item">
 			<div class="key">Tags:</div>
-			<div class="value">{{activity.tags}}</div>
+			<div class="value">{{activity.tags}}&nbsp;</div>
 		</div>
 		<div class="buttons">
 			<a href='./activityEdit.html?id="{{activity.id}}"'>Edit & Delete</a>
