added menues to addactivity.html wird bisher im firefox nicht dargestellt, steht aber im Quellcode, bitte auf anderen plattformen prüfen ob vorhanden

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -129,6 +129,11 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 </script>
 </head>
 <body>
+	<div id="head"><img src="images/HM_Logo.jpeg" />
+	<h1>EduLife</h1>
+	<img src="images/Cal-Poly_Logo.jpeg" /></div>
+	<link href="style.css" rel="stylesheet" type="text/css" /><script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script><script src="https://angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0.js"></script>
+	<div id="menu"><a href="./index.html">Home</a> <a href="./activityAdd.html">Add Activity</a></div>
 	<div ng-controller="ActivityCtrl">
 		<h3>Activities:</h3>
 		<table class="mdl-data-table">
