--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -133,7 +133,7 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 	<h1>EduLife</h1>
 	<img src="images/Cal-Poly_Logo.jpeg" /></div>
 	<link href="style.css" rel="stylesheet" type="text/css" /><script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script><script src="https://angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0.js"></script>
-	<div id="menu"><a href="./index.html">Home</a> <a href="./activityAdd.html">Add Activity</a></div>
+	<div id="menu"><a href="./index.html">Home</a> <a href="./activityAdd.html">Add Activity</a><a href ="./detail.html">Show Post Details</a></div>
 	<div ng-controller="ActivityCtrl">
 		<h3>Activities:</h3>
 		<table class="mdl-data-table">
