--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -61,6 +61,10 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 			<div class="value">{{activity.text}}&nbsp;</div>
 		</div>
 		<div class="item">
+			<div class="key">Creation Date:</div>
+			<div class="value">{{activity.creationDate}}&nbsp;</div>
+		</div>
+		<div class="item">
 			<div class="key">Tags:</div>
 			<div class="value">{{activity.tags}}&nbsp;</div>
 		</div>
