Refunctioned "show" button to "Details anzeigen"

--- a/src/main/resources/static/activityAdd.html
+++ b/src/main/resources/static/activityAdd.html
@@ -129,9 +129,9 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 		<img src="images/Cal-Poly_Logo.jpeg" />
 	</div>
 	<div id="menu">
-    <a href="./index.html">Home</a> <a href="./activityAdd.html">Add Activity</a><a href ="./detail.html">Show Post Details</a></div>
+    <a href="./index.html">Home</a> <a href="./activityAdd.html">Add Activity</a></div>
 	</div>
-	<div id="body" ng-controller="AddActivityCtrl">
+	<div id = "body" ng-controller="AddActivityCtrl">
 		<h3>Add Activity</h3>
 <div id = "content">
 		<div class="item">
