--- a/src/main/resources/static/muster.html
+++ b/src/main/resources/static/muster.html
@@ -2,7 +2,7 @@
 <html ng-app="ActivityMeterApp">
 <head>
 <meta charset="utf-8">
-<title>Activity Details</title>
+<title>MusterSeite</title>
 <link rel="stylesheet" type= "text/css" href="style.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <script src="https://angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0.js"></script>
